Changelog
=========

8.4-dev - (unreleased)
----------------------

8.3 - (2014-11-20)
------------------
* Bug fix: Fixed table of contents page alignment
  [voineali refs #21628]
* Bug fix: Fixed duplicate cookies when printing collection header/footer
  [voineali refs #21628]

8.2 - (2014-10-15)
------------------
* Bug fix: Protect against random wkhtmltopdf Segmentation fault errors and
  retry 3 times to re-generate PDF
  [voineali refs #21149]

8.1 - (2014-10-01)
------------------
* Change: Prefix temporary files with package name: eea.converter.
  [voineali refs #21100]

8.0 - (2014-09-15)
------------------
* Feature: Possibility to run a PDF conversion job in safe mode (default) or not
  (raise all errors)
  [voineali refs #20845]
* Change: Changed download.pdf API in order to allow dry-run used by async jobs
  [voineali refs #20843]
* Change: Made @@pdf.support/can_download accessible from URL
  [voineali refs #20846]

7.1 - (2014-08-12)
------------------
* Bug fix: Align PDF Table of Contents trailing dotted with page number
  [voineali refs #20431]
* Bug fix: Fix long PDF header and footer texts and align left or right
  according with page parity
  [voineali refs #20431]
* Feature: Added i18n translations
  [voineali refs #20431]
* Feature: Added possibility to avoid truncated sentences in description
  [voineali refs #20456]
* Feature: Enabled javascript by default within PDF export.
  [voineali refs #20459]
* Feature: Added API to restrict access to download.pdf
  [voineali refs #20436]

7.0 - (2014-07-15)
------------------
* Feature: Added Table of Contents support
  [voineali refs #20268]
* Cleanup: Remove collective.sendaspdf dependency
  [voineali refs #20268]

6.8 - (2014-06-06)
------------------
* Feature: Added PDF Back Cover support
  [voineali refs #19882]
* Feature: Added PDF Disclaimer support (the first page after cover containing
  author details and copyrights)
  [voineali refs #19882]

6.7 - (2014-03-10)
------------------